<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tylorgarrett.notion.fragments.SettingsFragment"
    android:padding="5dp"
    xmlns:card_view="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/settings_header_one_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/user_settings"
        android:textSize="18sp"/>

    <android.support.v7.widget.CardView
        android:id="@+id/settings_profile_cardview"
        android:layout_below="@id/settings_header_one_textview"
        android:layout_width="fill_parent"
        android:layout_margin="10dp"
        android:clickable="true"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:padding="5dp">
            <TextView
                android:id="@+id/profile_card_header_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_settings"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/profile_card_subheader_textview"
                android:layout_below="@id/profile_card_header_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_edits"/>
        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/settings_header_two_textview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/settings_profile_cardview"
        android:padding="5dp"
        android:text="@string/settings_content"
        android:textSize="18sp"/>

    <android.support.v7.widget.CardView
        android:id="@+id/setting_notebook_cardview"
        android:layout_below="@id/settings_header_two_textview"
        android:layout_width="fill_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="1dp"
        android:clickable="true"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:padding="5dp">

            <TextView
                android:id="@+id/notebook_card_header_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notebook_settings"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/notebook_card_subheader_textview"
                android:layout_below="@id/notebook_card_header_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notebook_edits"/>
        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/setting_note_cardview"
        android:layout_below="@id/setting_notebook_cardview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="1dp"
        android:clickable="true">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:padding="5dp">

            <TextView
                android:id="@+id/note_card_header_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/note_settings"
                />

            <TextView
                android:id="@+id/note_card_subheader_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/note_card_header_textview"
                android:text="@string/note_edits"/>

        </RelativeLayout>

    </android.support.v7.widget.CardView>



    <android.support.v7.widget.CardView
        android:id="@+id/settings_logout_cardview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        card_view:cardBackgroundColor="#f00"
        android:alpha="0.5"
        android:gravity="bottom"
        android:clickable="true">
        <TextView
            android:id="@+id/logout_card_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_logout"
            android:layout_gravity="center_horizontal"
            android:padding="5dp"
            android:textColor="@color/white"
            android:textSize="20sp"/>
    </android.support.v7.widget.CardView>

</RelativeLayout>
